Use radial gradient for background color

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
-  background-color: #7ba0e9;
+  background-image: radial-gradient(circle, #ebf2fe, #060edd);
 
   header {
     min-height: 5vh;
