Switch side using Context API

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
   background-image: radial-gradient(circle, #ebf2fe, #060edd);
   
   main {
+    flex: 9 9 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
