--- a/src/Header.scss
+++ b/src/Header.scss
@@ -1,12 +1,16 @@
+@import 'variables';
+
 $text-color: rgb(255, 255, 255);
 $background-color: rgb(5, 5, 29);
 
 header {
-    flex: 0 0 10vh;
+    flex: 1 1 10vh;
     background-color: $background-color;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
+    color: $text-color;
+    text-transform: uppercase;
 
     display: flex;
 
@@ -14,9 +18,8 @@ header {
         margin: auto 1rem;
         display: flex;
         align-items: center;
+        border-radius: 4px;
         color: $text-color;
-        border-radius: 3px;
-        box-sizing: border-box;
         padding: 0.5rem;
         text-decoration: none;
 
@@ -27,7 +30,14 @@ header {
         &:hover {
             color: $background-color;
             background-color: $text-color;
-            box-shadow: 2px 2px 2px rgba(29, 61, 115, 0.7);
         }
+    }
+
+    .piece-color-switch {
+        margin: auto 1rem;
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
