--- a/src/RowColNames.scss
+++ b/src/RowColNames.scss
@@ -22,6 +22,14 @@
             padding-top: 1em;
         }
     }
+
+    &.top {
+        grid-area: 1 / 2 / span 1 / span 8;
+    }
+
+    &.bottom {
+        grid-area: 10 / 2 / span 1 / span 8;
+    }
 }
 
 .row-names {
@@ -39,6 +47,14 @@
             justify-content: flex-start;
             margin-left: 1em;
         }
+    }
+
+    &.left {
+        grid-area: 2 / 1 / span 8 / span 1;
+    }
+
+    &.right {
+        grid-area: 2 / 10 / span 8 / span 1;
     }
 }
 
